[辅助变动] 优化代码结构

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env]
 platform = espressif32
-board = esp32-s3-devkitc-1
+board = seeed_xiao_esp32s3
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
@@ -18,7 +18,7 @@ lib_deps =
 	tinyu-zhao/INA3221
 	mathertel/OneButton @ ^2.5.0
 
-[env:esp32-s3-devkitc-1]
+[env:xiao_esp32s3]
 build_type = release
 build_flags = -DCORE_DEBUG_LEVEL=0 -O0
 extra_scripts = post:generate_user_custom.py
@@ -26,4 +26,3 @@ custom_firmware_version = 0.0.1
 custom_firmware_name = stampfly_firmware
 custom_firmware_suffix = .bin
 custom_firmware_dir = ./
-	
